ui_tests/tests/parsing/outdented-bracket.stderr
error[E010]: found keyword `case`, but expected identifier
 --> ${DIRECTORY}/parsing/outdented-bracket.lushui:4:23
  |
4 | lengthy-space-filler (case 0 of
  |                       ^^^^ unexpected token
  |

error: aborting due to previous error

